Modify index file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
   
 	<body>
 		
-		
+		<!-- Navigation -->
+
+
+
+		<!-- Headline -->
+
+
+
+		<!-- Gallery -->
+
+
+
+		<!-- About -->
 
 
 	</body>
