This is a big commit - adds everything changed

--- a/index.html
+++ b/index.html
@@ -4,24 +4,342 @@
 		<meta charset=utf-8>
 		<title></title>
 		<link href="css/style.css" rel="stylesheet" />
+		<!-- Font Awesome -->
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
+		<!-- Google Fonts -->
+		<link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+
+		<!-- Lightbox -->
+		<link href="css/lightbox.min.css" rel="stylesheet">
+
 	</head>
   
 	<body>
 		
 		<!-- Navigation -->
-
+		<nav>
+			<div id="#home"></div>
+			<div class="brand">
+				<a href="index.html"><i class="fas fa-sun"></i><span>Pinoy Ganda</span></a>
+			</div>
+			<ul>
+				<li><a href="index.html"><i class="fas fa-star"></i>Home</a></li>
+				<li><a href="#gallery-nav"><i class="fas fa-star"></i>Gallery</a></li>
+				<li><a href="#about"><i class="fas fa-star"></i>Facts</a></li>
+			</ul>
+		</nav>
 
 
 		<!-- Headline -->
+		<div class="container">
+			<section id="main">
+				<h1 class="main-header">
+					Welcome to Pinoy Ganda
+				</h1>
+				<p>
+					The Beauty of the Philippines in Pictures
+				</p>
+			</section>
+			<div class="main-text">
+				<h1 class="main-header">The Philippines</h1>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus at totam libero. Sed vel voluptate nihil asperiores perspiciatis! Harum ad officiis consectetur voluptates facilis atque fugiat nulla, pariatur eius esse.
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur dolore quibusdam at, voluptatum in quis molestias, eius accusamus eligendi laborum eos dolorem sit debitis natus earum placeat asperiores, commodi ea enim nihil perferendis voluptate! Doloremque voluptatibus facere perferendis, facilis ipsam, ad placeat hic ex iste ratione odio, inventore. Tenetur, voluptate.
+				</p>
+			</div>
+
+			
+
+			<div class="border">
+				<div class="border border-yellow"></div>
+				<div class="border border-blue"></div>
+				<div class="border border-red"></div>
+			</div>
+			<div id="gallery-nav"></div>
+
+
+			<!-- Gallery -->
+			<section id="gallery">
+				<h1 class="main-header">
+					Gallery
+				</h1>
+
+				<div class="gallery-row">
+					<div class="card-container">
+						<div class="card">
+							<div class="side">
+								<img src="img/gallery/thumbnail/01-rice-terraces.jpg">
+							</div>
+							<a href="img/gallery/01-rice-terraces.jpeg" data-lightbox="phillipines-gallery">  
+								<div class="side back">
+									<i class="fas fa-star"></i>
+									<h3>World Wide Wonders</h3>
+									<h4>Banawe Rice Terraces</h4>
+									<p>
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi vel eius natus, quibusdam quo eos ad laborum odio dolorum sunt. Nemo laboriosam aliquam, saepe eius quis modi veritatis. Molestiae, nam.
+									</p>	
+									<br><br>
+									<p>CLICK TO ENLARGE</p>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="card-container">
+						<div class="card">
+							<div class="side">
+								<img src="img/gallery/thumbnail/02-chocolate-hills.jpg">
+							</div>
+							<a href="img/gallery/02-chocolate-hills.jpeg" data-lightbox="phillipines-gallery">
+								<div class="side back">
+									<i class="fas fa-star"></i>
+									<h3>Amazing Landscapes</h3>
+									<h4>Chocolate Hills</h4>
+									<p>
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam quae earum, dignissimos at et esse, consequuntur perspiciatis quia tempora beatae, minus numquam commodi aspernatur culpa. Minima rem, sunt dolor praesentium!
+									</p>
+									<br><br>
+									<p>CLICK TO ENLARGE</p>	
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="card-container">
+						<div class="card">
+							<div class="side">
+								<img src="img/gallery/thumbnail/03-the-people.jpg">
+							</div>
+							<a href="img/gallery/03-the-people.jpg" data-lightbox="phillipines-gallery">
+								<div class="side back">
+									<i class="fas fa-star"></i>
+									<h3>The People</h3>
+									<h4>Hospitality Capital</h4>
+									<p>
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi impedit, optio sunt iste qui veniam voluptates, dolorem quam inventore enim voluptate natus possimus dolores quod dolore voluptas nesciunt et maxime!
+									</p>
+									<br><br>
+									<p>CLICK TO ENLARGE</p>
+								</div>
+							</a>
+						</div>	
+					</div>
+				</div>
+
+
+				<div class="gallery-row">
+					<div class="card-container">
+						<div class="card">
+							<div class="side">
+								<img src="img/gallery/thumbnail/04-taal.jpg">
+							</div>
+							<a href="img/gallery/04-taal.jpg" data-lightbox="phillipines-gallery">
+								<div class="side back">
+									<i class="fas fa-star"></i>
+									<h3>Natural Wonders</h3>
+									<h4>Taal Volcano</h4>
+									<p>
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi impedit, optio sunt iste qui veniam voluptates, dolorem quam inventore enim voluptate natus possimus dolores quod dolore voluptas nesciunt et maxime!
+									</p>
+									<br><br>
+									<p>CLICK TO ENLARGE</p>
+								</div>
+							</a>
+						</div>	
+					</div>
+					<div class="card-container">
+						<div class="card">
+							<div class="side">
+								<img src="img/gallery/thumbnail/05-manila.jpg">
+							</div>
+							<a href="img/gallery/05-manila.jpg" data-lightbox="phillipines-gallery">  
+								<div class="side back">
+									<i class="fas fa-star"></i>
+									<h3>A Modern City</h3>
+									<h4>Manila</h4>
+									<p>
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi vel eius natus, quibusdam quo eos ad laborum odio dolorum sunt. Nemo laboriosam aliquam, saepe eius quis modi veritatis. Molestiae, nam.
+									</p>
+									<br><br>
+									<p>CLICK TO ENLARGE</p>	
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="card-container">
+						<div class="card">
+							<div class="side">
+								<img src="img/gallery/thumbnail/06-tarsus.jpg">
+							</div>
+							<a href="img/gallery/06-tarsus.jpg" data-lightbox="phillipines-gallery">
+								<div class="side back">
+									<i class="fas fa-star"></i>
+									<h3>Philippine Wildlife</h3>
+									<h4>The Tarsus</h4>
+									<p>
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam quae earum, dignissimos at et esse, consequuntur perspiciatis quia tempora beatae, minus numquam commodi aspernatur culpa. Minima rem, sunt dolor praesentium!
+									</p>
+									<br><br>
+									<p>CLICK TO ENLARGE</p>	
+								</div>
+							</a>
+						</div>
+					</div>
+				</div>
 
 
 
-		<!-- Gallery -->
+				<div class="gallery-row">
+					<div class="card-container">
+						<div class="card">
+							<div class="side">
+								<img src="img/gallery/thumbnail/07-boracay.jpg">
+							</div>
+							<a href="img/gallery/07-boracay.jpg" data-lightbox="phillipines-gallery"> 
+								<div class="side back">
+									<i class="fas fa-star"></i>
+									<h3>Gorgeous Beaches</h3>
+									<h4>Boracay Beach</h4>
+									<p>
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi vel eius natus, quibusdam quo eos ad laborum odio dolorum sunt. Nemo laboriosam aliquam, saepe eius quis modi veritatis. Molestiae, nam.
+									</p>
+									<br><br>
+									<p>CLICK TO ENLARGE</p>	
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="card-container">
+						<div class="card">
+							<div class="side">
+								<img src="img/gallery/thumbnail/08-the-food-caldereta.jpg">
+							</div>
+							<a href="img/gallery/08-the-food-caldereta.jpg" data-lightbox="phillipines-gallery">
+								<div class="side back">
+									<i class="fas fa-star"></i>
+									<h3>Delicious Food</h3>
+									<h4>Caldereta</h4>
+									<p>
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam quae earum, dignissimos at et esse, consequuntur perspiciatis quia tempora beatae, minus numquam commodi aspernatur culpa. Minima rem, sunt dolor praesentium!
+									</p>
+									<br><br>
+									<p>CLICK TO ENLARGE</p>	
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="card-container">
+						<div class="card">
+							<div class="side">
+								<img src="img/gallery/thumbnail/08-the-seas.jpg"></a>
+							</div>
+							<a href="img/gallery/08-the-seas.jpg" data-lightbox="phillipines-gallery">
+								<div class="side back">
+									<i class="fas fa-star"></i>
+									<h3>Life in the Seas</h3>
+									<h4>A Clown Fish</h4>
+									<p>
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi impedit, optio sunt iste qui veniam voluptates, dolorem quam inventore enim voluptate natus possimus dolores quod dolore voluptas nesciunt et maxime!
+									</p>
+									<br><br>
+									<p>CLICK TO ENLARGE</p>
+								</div>
+							</a>
+						</div>	
+					</div>
+				</div>
+			</section>
+
+			
+
+			<div class="border">
+				<div class="border-yellow"></div>
+				<div class="border-blue"></div>
+				<div class="border-red"></div>
+			</div>
+			<div id="gallery-nav"></div>
 
 
+			<!-- About -->
+			<section id="about">
+				<h1 class="main-header">
+					Facts About The Phillipines
+				</h1>
 
-		<!-- About -->
+				<div class="about-columns">
+					<div class="about-column">
+						<h3>Population</h3>
+						<ul>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+						</ul>
+					</div>
+					<div class="about-column">
+						<h3>History</h3>
+						<ul>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+						</ul>
+					</div>
+					<div class="about-column">
+						<h3>More Facts</h3>
+						<ul>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+						</ul>
+					</div>
+				</div>
+			</section>
 
+			<footer>
+				<div class="brand">
+					</i><span>Pinoy Ganda</span>
+				</div>
+			</footer>
 
+		</div>
+
+		
+		<!-- jQuery CDN -->
+		<script src="js/lightbox-plus-jquery.min.js"></script>
+		<script type="text/javascript">
+			lightbox.option({
+				'alwaysShowNavOnTouchDevices': true,
+				'albumLabel': "The Beauty of the Phillipines",
+      			'resizeDuration': 200,
+      			'wrapAround': true,
+      			'fadeDuration': 300,
+      			'imageFadeDuration': 300,
+      			'resizeDuration': 300,
+      			'wrapAround': true
+    		})
+		</script>
 	</body>
 </html>
