--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
 		<meta charset=utf-8>
 		<title></title>
 		<link href="css/style.css" rel="stylesheet" />
-		<!-- Font Awesome -->
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116671141-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-116671141-1');
+		</script>
+
+		<!-- Font A`wesome -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
@@ -302,10 +313,10 @@
 					<div class="about-column">
 						<h3>More Facts</h3>
 						<ul>
-							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
-							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
-							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
-							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
+							<li><i class="fas fa-star"></i> It is an archipelago with 7k+ islands</li>
+							<li><i class="fas fa-star"></i> About 175 languages are spoken</li>
+							<li><i class="fas fa-star"></i> It is the largest coconut exporter</li>
+							<li><i class="fas fa-star"></i> One of it's islands, palawan, was named Best Island in the world by Conde Nast</li>
 							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
 							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
 							<li><i class="fas fa-star"></i> Lorem ipsum dolor sit.</li>
