--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<div class="main-text">
 				<h1 class="main-header">The Philippines</h1>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus at totam libero. Sed vel voluptate nihil asperiores perspiciatis! Harum ad officiis consectetur voluptates facilis atque fugiat nulla, pariatur eius esse.
+					The Philippines is an archipelago made up of over 7000 islands. 
 				</p>
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur dolore quibusdam at, voluptatum in quis molestias, eius accusamus eligendi laborum eos dolorem sit debitis natus earum placeat asperiores, commodi ea enim nihil perferendis voluptate! Doloremque voluptatibus facere perferendis, facilis ipsam, ad placeat hic ex iste ratione odio, inventore. Tenetur, voluptate.
